# comp-phys-project

./: .gitignore  3t40cd5u.w0d.txt  IAmADemo.bat  README.md  THIS-IS-A-TEST2.txt  THIS-IS-A-TEST3.txt
NaSt2D/: CMakeLists.txt
NaSt2D-2.0/: CMakeLists.txt
NaSt2D-2.0/Grafik/c/: IsoFarb.c  Profil-circle.c  Streak-balken.c  Trace.c  Tropfen1.c  Tropfen2.c  Vektor-circle.c  autoBdatInc.c  autoBplotInc.c  e3Ddruck.c
NaSt2D-2.0/Grafik/for/: IsoFarb.for  Profil-circle.for  Streak-balken.for  Trace.for  Tropfen1.for  Tropfen2.for  Vektor-circle.for  autoBdatInc.for  autoBplotInc.for  e3Ddruck.for
NaSt2D-2.0/Grafik/kon/: autoA.kon  autoB.kon  autoC.kon  autoD.kon  autoE.kon  drachen.kon  ventilD.kon  ventilE.kon  ventilK.kon  ventilL.kon  ventilP.kon  ventilR.kon
NaSt2D-2.0/Par/: .directory  autoA.par  autoB.par  autoC.par  autoD.par  autoE.par  backstep.par  balken.par  convection.par  damm.par  dcavity.par  drachen.par  duese.par  fluidtrap.par  kreis.par  rayleigh.par  spritzguss.par  tropfen1.par  tropfen2.par  ventilD.par  ventilE.par  ventilK.par  ventilL.par  ventilP.par  ventilR.par  wafa.par
NaSt2D-2.0/Program/: .directory  Dat.out  Makefile_L  Makefile_W  boundary.c  boundary.h  cars.c  datadef.h  dcav.out  dcav.tra  drachen.c  flag.c  flag.h  init.c  init.h  main.c  surface.c  surface.h  turbulence.c  turbulence.h  uvp.c  uvp.h  valves.c  visual.c  visual.h  zeit.gnu
NaSt2D-2.0/Tools/c/: .directory  CMakeLists.txt  Dat.in  Dat.out  datgen.c  (+9 more)
NaSt2D/examples/: dcavity.par
NaSt2D/source/: bndt.out  boundTest.par  boundary.c  dcav.out  dcav.tra  init.c
(+78 files in other folders)
